# pilpod

./: .gitignore  PilPod_Arch_Review.md  PilPod_Beta_doc.md  index.html  package-lock.json  package.json
docs/: # PilPod Companion v2.0.md  MEDIA_DETECTION.md  PILPOD_BRIDGE_REFINEMENT_PLAN.md  PILPOD_DOWNLOAD_FEATURE_PLAN.md  pilpod-wake-and-sync-plan.md  updating-app-icons.md  youtube_media_item_v5.html  youtube_media_item_v6.html
extensions/omnimedia-companion/: background.js  content.js  manifest.json
extensions/pilpod-companion/: RUST_INTEGRATION_NOTES.md  background.js  content.js  manifest.json
graphics/: pilpod.icns  pilpod.psd
pilpod-companion/: .gitignore  CHANGELOG.md  CHROME_WEB_STORE.md  CWS_REVIEWER_NOTES.md  PILPOD_RUST_INTEGRATION.md  PRIVACY.md  eslint.config.js  manifest.json  package-lock.json  package.json
pilpod-companion - broken/: manifest.json
pilpod-companion - broken/src/: background.js  content.js
pilpod-companion - broken/src/shared/: browser.js  constants.js  protocol.js
pilpod-companion/scripts/: package.mjs
pilpod-companion/src/: background.js  content.js
pilpod-companion/src/background/: discovery.js  dynamicInjection.js  popupBridge.js  standalonePopupBridge.js
pilpod-companion/src/shared/: bridgeConfig.js  bridgeConfig.types.js  browser.js  constants.js  mediaGate.js  mediaUrlRules.js  pilpodConfig.js  protocol.js  staticMediaPatterns.js
pilpod-companion/src/ui/: popup.css  popup.html  popup.js  standalone.css  standalone.html  standalone.js
plans/: MEDIA_DETECTION_REFACTOR_WORKPLAN.md  PILPOD_BRIDGE_PHASE2_REMAINING.md  PILPOD_BRIDGE_REFINEMENT_PLAN.md  pilpod-browser-scan-enhancement.md
scripts/: fetch-binaries.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  dev-lab.json
src-tauri/src/: browser_bridge.rs  browser_catalog.rs  browser_commands.rs  browser_detector.rs  browser_focus_win.rs  browser_icon.rs  browser_os_scan.rs  browser_tabs.rs  lib.rs  main.rs  wallpaper.rs  window_widget.rs
src-tauri/src/app/: handlers.rs  mod.rs  setup.rs
src-tauri/src/audio_mixer/: mod.rs
src-tauri/src/browser_bridge/: command.rs  connections.rs  handler.rs  http.rs  mod.rs  protocol.rs  system_events.rs  ws.rs
src-tauri/src/dev_lab/: mod.rs  wake.rs
src-tauri/src/downloader/: binary.rs  commands.rs  formats.rs  mod.rs  settings.rs  state.rs  worker.rs
src-tauri/src/gsmtc/: audio_attach.rs  commands.rs  dto.rs  mapping.rs  mod.rs  state.rs  thumbnail.rs
src-tauri/src/platform/: mod.rs  stub_commands.rs
src/components/: MediaDashboard.tsx
src/features/dev-lab/: DevLabApp.css  DevLabApp.tsx  index.ts
src/shared/: groupTabsByWindow.ts  mediaUrlRules.ts
src/theme/: appearance.ts
src/types/: media.ts
(+105 files in other folders)
