[package]
name = "omnimedia"
version = "0.1.0"
description = "OmniMedia — Windows GSMTC dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "omnimedia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Media_Control", "Storage_Streams"] }
base64 = "0.22"
tiny_http = "0.12"
