[package]
name = "pilpod"
version = "0.1.0"
description = "PilPod — Windows GSMTC dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "pilpod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
] }
base64 = "0.22"
tiny_http = "0.12"
winreg = "0.52"
