[package]
name = "pilpod"
version = "0.1.0"
description = "PilPod — Windows GSMTC dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "pilpod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Power",
  "Win32_Security",
] }
base64 = "0.22"
image = "0.25"
winreg = "0.52"
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
